# share-anywhere

./: .editorconfig  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
scripts/: build-sidecar.mjs
src/: App.vue  main.ts  shims.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/clipboard/: Cargo.toml
src-tauri/clipboard/src/: cli.rs  lib.rs  linux.rs  macos.rs
src-tauri/icons/: icon.icns
src-tauri/src/: clip_proxy.rs  main.rs  result.rs  svc_command.rs  svc_crypto.rs  svc_http.rs  svc_manager.rs  svc_transport.rs  util.rs
src-tauri/src/cert_gen/: csr.conf  mod.rs
src/styles/: index.css
src/styles/dark/: css-vars.css
src/styles/light/: css-vars.css
